<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.example.android.scorekeeperrugby2.MainActivity">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/rugby2" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/LinearLayoutHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/TeamA"
                    android:textColor="@color/colorTeam"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/Zero"
                    android:freezesText="true"
                    android:textColor="@color/colorScore"
                    android:textSize="32sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addFiveForTeamA"
                    android:text="@string/Try"
                    android:textColor="@color/colorButtonText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/ConvertedTry"
                    android:textColor="@color/colorButtonText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/DropGoal"
                    android:textColor="@color/colorButtonText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/Penalty"
                    android:textColor="@color/colorButtonText" />

            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="190dp"
                android:layout_marginTop="170dp"
                android:background="#1D6799"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/TeamB"
                    android:textColor="@color/colorTeam"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/Zero"
                    android:freezesText="true"
                    android:textColor="@color/colorScore"
                    android:textSize="32sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addFiveForTeamB"
                    android:text="@string/Try"
                    android:textColor="@color/colorButtonText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/ConvertedTry"
                    android:textColor="@color/colorButtonText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/DropGoal"
                    android:textColor="@color/colorButtonText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/Penalty"
                    android:textColor="@color/colorButtonText" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayoutHorizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:onClick="resetScore"
            android:text="@string/Reset"
            android:textColor="@color/colorButtonText" />

    </RelativeLayout>

</ScrollView>